# django_project

./: pyproject.toml
django_project/: settings.py  urls.py
templates/tree_menu/: index.html  menu.html
tree_menu/: admin.py  models.py  settings.py  urls.py  views.py
tree_menu/migrations/: 0001_initial.py
tree_menu/templatetags/: menu_extras.py
